These are the release notes for the Education Program extension.
	
Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Education_Program
Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/EducationProgram/RELEASE-NOTES?view=co



=== Version 0.1 ===
(trunk)

Initial release with these features:

* ...